Fix footer width on mobile

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ article p:last-child {
 }
 
 footer {
-	width: 480px;
+	max-width: 480px;
 	margin: 2em auto;
 	padding-bottom: 2em;
 	font-family: monospace;
